# Mastering_Flask_Web_Development

./: README.md
Big_Mikes_Blog/: app.py  init.sh  init_db.py  schema.sql
Big_Mikes_Blog/instance/: database.db
Big_Mikes_Blog/migrations/versions/: 4c871db534be_.py
Big_Mikes_Blog/templates/: about.html  base.html  create.html  index.html  macros.html  messages.html  post.html  tag.html  user.html
Hello_World/: app.py
My_Blog/: README.md  app.py  forms.py  pyproject.toml
My_Blog/instance/: database.db
My_Blog/templates/: about.html  base.html  create.html  edit.html  index.html  login.html  macros.html  messages.html  post.html  register.html  user.html
